Fixed the spacing bug in the .slideshow

--- a/style.css
+++ b/style.css
@@ -4,13 +4,15 @@
   font-family: 'Baskerville Display PT Regular';
   color: #873739 ;
 }
+html {
+  overflow: hidden;
+}
 body {
   font: 14px/2 "Open sans",sans-serif;
   letter-spacing: 0.05em;
-  overflow-y: hidden;
-}
-html {
-  overflow: hidden;
+  height: 100vh;
+  width: 100%;
+  margin: 0;
 }
 
 .btn {
@@ -65,7 +67,7 @@ html {
 
 .slideshow {
   overflow: hidden;
-  /* position: fixed; */
+  position: fixed;
   width: 100%;
   height: 100vh;
   z-index: 1;
@@ -323,7 +325,7 @@ html {
   width: 59%;
   overflow: hidden !important;
   vertical-align: auto;
-  float: right;
+  float: left;
 }
 
 .style-1 img {
@@ -350,7 +352,7 @@ html {
 .style-2-right {
   height: 100%;
   width: 40%;
-  float: right;
+  float: left;
 }
 
 .style-2 img {
